[gd_scene load_steps=54 format=3 uid="uid://hl4xtvdy2spj"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_88xg1"]
[ext_resource type="Script" path="res://scripts/player/camera_handler.gd" id="6_1qean"]
[ext_resource type="Texture2D" uid="uid://cue6n6ustabi6" path="res://art/player/combined_char_red.png" id="6_4ign3"]
[ext_resource type="Script" path="res://scripts/player/hook_handler.gd" id="7_3efig"]
[ext_resource type="Script" path="res://scripts/player/player_combat.gd" id="7_5wpcc"]
[ext_resource type="AudioStream" uid="uid://dd3ovsomx67yq" path="res://art/player/level_up_sound.mp3" id="7_ji7pi"]
[ext_resource type="Script" path="res://scripts/player/player_movement.gd" id="8_1yhd2"]
[ext_resource type="AudioStream" uid="uid://rh0u2b3g7crj" path="res://audio/sfx/atk_hit.mp3" id="8_3kion"]
[ext_resource type="AudioStream" uid="uid://c7ljb1moll14b" path="res://audio/sfx/oof.mp3" id="9_k76pr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rru7u"]
radius = 27.0
height = 78.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6bvx"]
size = Vector2(67, 59.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3shht"]
size = Vector2(55, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01snw"]
size = Vector2(56, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xutg"]
size = Vector2(107, 34)

[sub_resource type="Animation" id="Animation_yci86"]
resource_name = "heavy_attack"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.4, 0.48, 0.56, 0.64, 0.72),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125, 126, 127]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/HeavyAttackCollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.48),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_knal0"]
resource_name = "idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_u2y5l"]
resource_name = "light_attack_1"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.34, 0.42),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/LightAttack1CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.24, 0.34),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_atbjq"]
resource_name = "light_attack_2"
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/LightAttack2CollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_hvlqx"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_s2ags"]
resource_name = "slide"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [107]
}

[sub_resource type="Animation" id="Animation_xkwyt"]
resource_name = "swing"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [104]
}

[sub_resource type="Animation" id="Animation_mvdp2"]
resource_name = "swing_attack"
length = 0.42
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.26, 0.34),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147, 148]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackBox/SwingAttackCollisionShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.16, 0.26),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_y8g8y"]
resource_name = "wall_hook"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [115]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8pbw"]
_data = {
"heavy_attack": SubResource("Animation_yci86"),
"idle": SubResource("Animation_knal0"),
"light_attack_1": SubResource("Animation_u2y5l"),
"light_attack_2": SubResource("Animation_atbjq"),
"run": SubResource("Animation_hvlqx"),
"slide": SubResource("Animation_s2ags"),
"swing": SubResource("Animation_xkwyt"),
"swing_attack": SubResource("Animation_mvdp2"),
"wall_hook": SubResource("Animation_y8g8y")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6gj08"]
animation = &"heavy_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3nhas"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vpo4t"]
animation = &"light_attack_1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j8p44"]
animation = &"light_attack_2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4ke82"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1rmua"]
animation = &"slide"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2xblr"]
animation = &"swing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8qhqt"]
animation = &"swing_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibepb"]
animation = &"wall_hook"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_30nxx"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_75i5w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cqm68"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n2mj7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_e4pfv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fy1x5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0kq4y"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hk0fq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ghos6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1vpw8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sd4oe"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kokm2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jdi1n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pl4f7"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e4pw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bx32w"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_opk28"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_lhmv1"]
states/End/position = Vector2(1065, 132)
states/heavy_attack/node = SubResource("AnimationNodeAnimation_6gj08")
states/heavy_attack/position = Vector2(293, -29)
states/idle/node = SubResource("AnimationNodeAnimation_3nhas")
states/idle/position = Vector2(480, 84)
states/light_attack_1/node = SubResource("AnimationNodeAnimation_vpo4t")
states/light_attack_1/position = Vector2(293, -153)
states/light_attack_2/node = SubResource("AnimationNodeAnimation_j8p44")
states/light_attack_2/position = Vector2(293, -93)
states/run/node = SubResource("AnimationNodeAnimation_4ke82")
states/run/position = Vector2(267, 202)
states/slide/node = SubResource("AnimationNodeAnimation_1rmua")
states/slide/position = Vector2(754, 210)
states/swing/node = SubResource("AnimationNodeAnimation_2xblr")
states/swing/position = Vector2(740, 50)
states/swing_attack/node = SubResource("AnimationNodeAnimation_8qhqt")
states/swing_attack/position = Vector2(747, -137)
states/wall_hook/node = SubResource("AnimationNodeAnimation_ibepb")
states/wall_hook/position = Vector2(754, 146)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_30nxx"), "idle", "heavy_attack", SubResource("AnimationNodeStateMachineTransition_75i5w"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_cqm68"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_n2mj7"), "heavy_attack", "idle", SubResource("AnimationNodeStateMachineTransition_e4pfv"), "idle", "light_attack_1", SubResource("AnimationNodeStateMachineTransition_fy1x5"), "light_attack_1", "light_attack_2", SubResource("AnimationNodeStateMachineTransition_0kq4y"), "light_attack_2", "idle", SubResource("AnimationNodeStateMachineTransition_hk0fq"), "light_attack_1", "idle", SubResource("AnimationNodeStateMachineTransition_ghos6"), "idle", "swing", SubResource("AnimationNodeStateMachineTransition_1vpw8"), "swing", "idle", SubResource("AnimationNodeStateMachineTransition_sd4oe"), "swing", "slide", SubResource("AnimationNodeStateMachineTransition_kokm2"), "slide", "idle", SubResource("AnimationNodeStateMachineTransition_jdi1n"), "swing", "wall_hook", SubResource("AnimationNodeStateMachineTransition_pl4f7"), "wall_hook", "idle", SubResource("AnimationNodeStateMachineTransition_1e4pw"), "swing", "swing_attack", SubResource("AnimationNodeStateMachineTransition_bx32w"), "swing_attack", "swing", SubResource("AnimationNodeStateMachineTransition_opk28")]
graph_offset = Vector2(69, -232)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_74ae3"]
radius = 4.0
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w4y3r"]
radius = 27.0
height = 70.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 32803
collision_mask = 32803
script = ExtResource("1_88xg1")
hook_speed = 891
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_rru7u")

[node name="AttackBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="LightAttack1CollisionShape" type="CollisionShape2D" parent="AttackBox"]
light_mask = 0
visibility_layer = 512
position = Vector2(41.5, -0.25)
shape = SubResource("RectangleShape2D_r6bvx")
disabled = true

[node name="LightAttack2CollisionShape" type="CollisionShape2D" parent="AttackBox"]
light_mask = 0
visibility_layer = 512
position = Vector2(35.5, -0.5)
shape = SubResource("RectangleShape2D_3shht")
disabled = true

[node name="HeavyAttackCollisionShape" type="CollisionShape2D" parent="AttackBox"]
light_mask = 0
visibility_layer = 512
position = Vector2(36, -4)
shape = SubResource("RectangleShape2D_01snw")
disabled = true

[node name="SwingAttackCollisionShape" type="CollisionShape2D" parent="AttackBox"]
light_mask = 0
visibility_layer = 512
position = Vector2(22.5, -1)
shape = SubResource("RectangleShape2D_8xutg")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_4ign3")
offset = Vector2(0, -15)
hframes = 8
vframes = 19
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8pbw")
}
speed_scale = 0.1

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8pbw")
}
tree_root = SubResource("AnimationNodeStateMachine_lhmv1")
anim_player = NodePath("../AnimationPlayer")

[node name="HookHandler" type="Node" parent="."]
script = ExtResource("7_3efig")

[node name="HookRegenerate" type="Timer" parent="HookHandler"]
one_shot = true

[node name="CombatHandler" type="Node" parent="."]
script = ExtResource("7_5wpcc")

[node name="MovementHandler" type="Node" parent="."]
script = ExtResource("8_1yhd2")

[node name="CameraHandler" type="Node" parent="."]
script = ExtResource("6_1qean")

[node name="CheckArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
shape = SubResource("CapsuleShape2D_74ae3")
debug_color = Color(0.956863, 0.027451, 0.0352941, 0.227451)

[node name="HitBoxArea2D" type="Area2D" parent="."]
collision_layer = 32769
collision_mask = 32769
metadata/player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxArea2D"]
shape = SubResource("CapsuleShape2D_w4y3r")
debug_color = Color(0.345098, 0.619608, 0.129412, 0.419608)

[node name="LevelUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ji7pi")
volume_db = -15.0
pitch_scale = 1.35

[node name="AtkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_3kion")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_k76pr")
volume_db = 5.0

[connection signal="body_entered" from="AttackBox" to="." method="_on_attack_box_body_entered"]
[connection signal="hook_regenerated" from="HookHandler" to="." method="_on_hook_handler_hook_regenerated"]
[connection signal="timeout" from="HookHandler/HookRegenerate" to="HookHandler" method="_on_hook_regenerate_timeout"]
[connection signal="area_entered" from="CheckArea" to="." method="_on_check_area_area_entered"]
[connection signal="area_exited" from="CheckArea" to="." method="_on_check_area_area_exited"]
[connection signal="area_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_area_entered"]
[connection signal="area_exited" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_area_exited"]
[connection signal="body_entered" from="HitBoxArea2D" to="." method="_on_hit_box_area_2d_body_entered"]
